platform/argocd/foundations/2e6d10bd-a721-44bd-ae01-90bc4488997b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc414-source-20260829234930-rc414-clone-f0b5db03
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 2e6d10bd-a721-44bd-ae01-90bc4488997b
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: b37ebcc8-2087-4952-b2f0-8b8e530fcc42
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc414-source-20260829234930-rc414-clone-f0b5db03
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 2e6d10bd-a721-44bd-ae01-90bc4488997b
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: b37ebcc8-2087-4952-b2f0-8b8e530fcc42
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc414-source-20260829234930-rc414-clone-f0b5db03
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 2e6d10bd-a721-44bd-ae01-90bc4488997b
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: b37ebcc8-2087-4952-b2f0-8b8e530fcc42
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-rc414-source-20260829234930-rc414-clone-f0b5db03
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 2e6d10bd-a721-44bd-ae01-90bc4488997b
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: b37ebcc8-2087-4952-b2f0-8b8e530fcc42
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
